--- a/certifications/cka/index.html
+++ b/certifications/cka/index.html
@@ -1,15 +1,18 @@
 ---
 layout: page
 title: CKA (Certified Kubernetes Administrator)
-description: CKA 자격증 준비 및 기출문제 - 기술 블로그 포스팅과 연결된 학습 자료
+description: 기출문제 및 연습 문제를 통한 자격증 준비 - 기술 블로그 포스팅과 연결된 학습 자료
 permalink: /certifications/cka/
 ---
 <div class="certification-detail-page">
-  <div class="page-header">
-    <h1>CKA (Certified Kubernetes Administrator)</h1>
-    <p class="page-description">기술 블로그 포스팅과 연결된 학습 자료</p>
-    <a href="https://www.cncf.io/certification/cka/" target="_blank" rel="noopener noreferrer" class="official-link">
-      공식 사이트 방문 →
+  <div class="header-actions" style="margin-bottom: 3rem;">
+    <a href="https://www.cncf.io/certification/cka/" target="_blank" rel="noopener noreferrer" class="header-action-button official-button">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+        <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+        <polyline points="15 3 21 3 21 9"></polyline>
+        <line x1="10" y1="14" x2="21" y2="3"></line>
+      </svg>
+      <span>공식 사이트</span>
     </a>
   </div>
 
@@ -289,22 +292,77 @@ permalink: /certifications/cka/
 .page-description {
   font-size: 1.1rem;
   color: var(--text-secondary);
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
-.official-link {
-  display: inline-block;
+.header-actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin-top: 1.5rem;
+}
+
+.header-action-button {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
   padding: 0.75rem 1.5rem;
-  background: var(--primary);
-  color: white;
+  font-size: 0.9375rem;
+  font-weight: 500;
   text-decoration: none;
   border-radius: 8px;
-  font-weight: 500;
-  transition: background 0.2s;
+  transition: all 0.2s ease;
+  border: 1px solid transparent;
+  white-space: nowrap;
 }
 
-.official-link:hover {
+.header-action-button svg {
+  flex-shrink: 0;
+  width: 16px;
+  height: 16px;
+}
+
+.header-action-button.posts-button {
+  background: var(--bg-secondary);
+  color: var(--text-primary);
+  border-color: var(--border);
+}
+
+.header-action-button.posts-button:hover {
+  background: var(--bg-primary);
+  border-color: var(--primary);
+  color: var(--primary);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.header-action-button.posts-button:focus-visible {
+  outline: 2px solid var(--primary);
+  outline-offset: 2px;
+}
+
+.header-action-button.official-button {
+  background: var(--primary);
+  color: white;
+  border-color: var(--primary);
+}
+
+.header-action-button.official-button:hover {
   background: var(--primary-dark, #0056b3);
+  border-color: var(--primary-dark, #0056b3);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3);
+}
+
+.header-action-button.official-button:focus-visible {
+  outline: 2px solid var(--primary);
+  outline-offset: 2px;
+}
+
+.header-action-button:active {
+  transform: translateY(0);
 }
 
 .certification-info,
@@ -1029,6 +1087,16 @@ permalink: /certifications/cka/
 @media (max-width: 768px) {
   .page-header h1 {
     font-size: 2rem;
+  }
+  
+  .header-actions {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .header-action-button {
+    width: 100%;
+    justify-content: center;
   }
   
   .topics-grid {
