feat: AWS SAA 페이지를 정보처리기사와 동일한 구조로 업데이트
- 2024년 이후 기출문제를 연도별로 구분 (2024년, 2025년, 2026년)
- 필터 옵션 세분화 (EC2, S3, RDS, Lambda, VPC, IAM 등 추가)
- 정보처리기사와 동일한 구조로 통일

--- a/certifications/aws-saa/index.html
+++ b/certifications/aws-saa/index.html
@@ -68,6 +68,34 @@ permalink: /certifications/aws-saa/
             <option value="모니터링 및 로깅">모니터링 및 로깅</option>
             <option value="데이터베이스 고가용성">데이터베이스 고가용성</option>
             <option value="네트워크 보안">네트워크 보안</option>
+            <option value="EC2">EC2</option>
+            <option value="S3">S3</option>
+            <option value="RDS">RDS</option>
+            <option value="Lambda">Lambda</option>
+            <option value="VPC">VPC</option>
+            <option value="IAM">IAM</option>
+            <option value="CloudWatch">CloudWatch</option>
+            <option value="Route 53">Route 53</option>
+            <option value="Auto Scaling">Auto Scaling</option>
+            <option value="Load Balancer">Load Balancer</option>
+            <option value="Elastic Beanstalk">Elastic Beanstalk</option>
+            <option value="CloudFormation">CloudFormation</option>
+            <option value="ElastiCache">ElastiCache</option>
+            <option value="DynamoDB">DynamoDB</option>
+            <option value="SNS">SNS</option>
+            <option value="SQS">SQS</option>
+            <option value="EventBridge">EventBridge</option>
+            <option value="API Gateway">API Gateway</option>
+            <option value="KMS">KMS</option>
+            <option value="Secrets Manager">Secrets Manager</option>
+            <option value="WAF">WAF</option>
+            <option value="Shield">Shield</option>
+            <option value="GuardDuty">GuardDuty</option>
+            <option value="Config">Config</option>
+            <option value="Systems Manager">Systems Manager</option>
+            <option value="Organizations">Organizations</option>
+            <option value="Control Tower">Control Tower</option>
+            <option value="FinOps">FinOps</option>
           </select>
         </div>
         <div class="exam-stats">
@@ -133,7 +161,7 @@ permalink: /certifications/aws-saa/
     </div>
 
     <div class="questions-section question-card-view" id="questions-container">
-      <h3>2024년 이후 기출문제</h3>
+      <h3>2024년 기출문제</h3>
       
       <div class="question-card" data-topic="VPC 및 네트워크 보안" data-answer="A" data-converted="true">
         <div class="question-header">
@@ -390,6 +418,8 @@ permalink: /certifications/aws-saa/
         </div>
       </div>
 
+      <h3>2025년 기출문제</h3>
+
       <div class="question-card" data-topic="고가용성 및 확장성" data-answer="B" data-converted="true">
         <div class="question-header">
           <span class="question-number">문제 6</span>
@@ -644,6 +674,8 @@ permalink: /certifications/aws-saa/
           </div>
         </div>
       </div>
+
+      <h3>2026년 기출문제</h3>
 
       <div class="question-card" data-topic="CloudFront 및 CDN" data-answer="B" data-converted="true">
         <div class="question-header">
