fix: CKA 인증 페이지 CSS 스타일 태그 닫기 누락 수정

--- a/certifications/cka/index.html
+++ b/certifications/cka/index.html
@@ -1490,5 +1490,6 @@ permalink: /certifications/cka/
     min-width: 200px;
   }
 }
+</style>
 
 <script src="/assets/js/certification-quiz.js" defer></script>
