--- a/discussion.html
+++ b/discussion.html
@@ -5,19 +5,34 @@ description: 자유롭게 의견을 나누고 질문하세요
 permalink: /discussion/
 ---
 <div class="discussion-page">
-  <div class="alert info">
+  <!-- Hero Section -->
+  <header class="discussion-hero" role="banner">
+    <h2 class="discussion-hero-title">Community Discussion</h2>
+    <p class="discussion-hero-desc">
+      DevSecOps, 클라우드 보안, 쿠버네티스 등 기술 주제에 대해 자유롭게 의견을 나누고 질문하세요.
+    </p>
+  </header>
+
+  <!-- Info Alert -->
+  <div class="alert info" role="alert" aria-label="안내 메시지">
+    <svg class="alert-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+      <circle cx="12" cy="12" r="10"/>
+      <line x1="12" y1="16" x2="12" y2="12"/>
+      <line x1="12" y1="8" x2="12.01" y2="8"/>
+    </svg>
     <p>
       <strong>GitHub Discussions</strong>를 통해 커뮤니티와 소통합니다.
       기술적인 질문, 피드백, 또는 주제 제안 등 자유롭게 참여해 주세요!
     </p>
   </div>
 
-  <section>
-    <h2>Discussion Categories</h2>
+  <!-- Discussion Categories -->
+  <section aria-labelledby="discussion-categories-heading">
+    <h2 id="discussion-categories-heading" class="discussion-section-title">Discussion Categories</h2>
     <div class="category-grid">
-      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/general" target="_blank" rel="noopener" class="card discussion-category-card">
+      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/general" target="_blank" rel="noopener noreferrer" class="card discussion-category-card" data-category="general" aria-label="General - 일반적인 대화와 커뮤니티 소통">
         <div class="discussion-category-header">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-general">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-general" aria-hidden="true">
             <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
           </svg>
           <h3>General</h3>
@@ -25,21 +40,21 @@ permalink: /discussion/
         <p class="discussion-category-desc">일반적인 대화와 커뮤니티 소통</p>
       </a>
 
-      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/q-a" target="_blank" rel="noopener" class="card discussion-category-card">
+      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/q-a" target="_blank" rel="noopener noreferrer" class="card discussion-category-card" data-category="qa" aria-label="Q&A - 기술적인 질문과 답변">
         <div class="discussion-category-header">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-qa">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-qa" aria-hidden="true">
             <circle cx="12" cy="12" r="10"/>
             <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
             <line x1="12" y1="17" x2="12.01" y2="17"/>
           </svg>
-          <h3>Q&A</h3>
+          <h3>Q&amp;A</h3>
         </div>
         <p class="discussion-category-desc">기술적인 질문과 답변</p>
       </a>
 
-      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/ideas" target="_blank" rel="noopener" class="card discussion-category-card">
+      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/ideas" target="_blank" rel="noopener noreferrer" class="card discussion-category-card" data-category="ideas" aria-label="Ideas - 새로운 아이디어와 제안">
         <div class="discussion-category-header">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-ideas">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-ideas" aria-hidden="true">
             <path d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"/>
           </svg>
           <h3>Ideas</h3>
@@ -47,9 +62,9 @@ permalink: /discussion/
         <p class="discussion-category-desc">새로운 아이디어와 제안</p>
       </a>
 
-      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/show-and-tell" target="_blank" rel="noopener" class="card discussion-category-card">
+      <a href="https://github.com/{{ site.giscus.repo }}/discussions/categories/show-and-tell" target="_blank" rel="noopener noreferrer" class="card discussion-category-card" data-category="show" aria-label="Show and Tell - 프로젝트와 성과 공유">
         <div class="discussion-category-header">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-show">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="discussion-icon icon-show" aria-hidden="true">
             <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/>
           </svg>
           <h3>Show and Tell</h3>
@@ -59,36 +74,135 @@ permalink: /discussion/
     </div>
   </section>
 
-  <section>
-    <h2>How to Participate</h2>
-    <div class="card discussion-card">
-      <ol class="discussion-list">
-        <li>GitHub 계정으로 로그인합니다</li>
-        <li><a href="https://github.com/{{ site.giscus.repo }}/discussions" target="_blank" rel="noopener">Discussions 페이지</a>를 방문합니다</li>
-        <li>적절한 카테고리를 선택하여 새 Discussion을 시작합니다</li>
-        <li>각 블로그 포스트 하단의 댓글로도 참여할 수 있습니다</li>
-      </ol>
+  <!-- How to Participate -->
+  <section aria-labelledby="discussion-steps-heading">
+    <h2 id="discussion-steps-heading" class="discussion-section-title">How to Participate</h2>
+    <div class="discussion-steps">
+      <div class="discussion-step-card" role="listitem">
+        <span class="discussion-step-number" aria-hidden="true">1</span>
+        <p class="discussion-step-text">GitHub 계정으로 로그인합니다</p>
+      </div>
+      <div class="discussion-step-card" role="listitem">
+        <span class="discussion-step-number" aria-hidden="true">2</span>
+        <p class="discussion-step-text">
+          <a href="https://github.com/{{ site.giscus.repo }}/discussions" target="_blank" rel="noopener noreferrer">Discussions 페이지</a>를 방문합니다
+        </p>
+      </div>
+      <div class="discussion-step-card" role="listitem">
+        <span class="discussion-step-number" aria-hidden="true">3</span>
+        <p class="discussion-step-text">적절한 카테고리를 선택하여 새 Discussion을 시작합니다</p>
+      </div>
+      <div class="discussion-step-card" role="listitem">
+        <span class="discussion-step-number" aria-hidden="true">4</span>
+        <p class="discussion-step-text">각 블로그 포스트 하단의 댓글로도 참여할 수 있습니다</p>
+      </div>
     </div>
   </section>
 
-  <section>
-    <h2>Community Guidelines</h2>
-    <div class="card discussion-card">
-      <ul class="discussion-list">
-        <li><strong>존중:</strong> 다른 참여자를 존중하고 건설적인 대화를 유지해 주세요</li>
-        <li><strong>명확성:</strong> 질문이나 의견을 명확하게 작성해 주세요</li>
-        <li><strong>관련성:</strong> 보안, DevSecOps, 클라우드 관련 주제에 집중해 주세요</li>
-        <li><strong>공유:</strong> 유용한 정보와 경험을 자유롭게 공유해 주세요</li>
-      </ul>
+  <!-- Community Guidelines -->
+  <section aria-labelledby="discussion-guidelines-heading">
+    <h2 id="discussion-guidelines-heading" class="discussion-section-title">Community Guidelines</h2>
+    <div class="discussion-guidelines">
+      <div class="discussion-guideline-item">
+        <div class="discussion-guideline-badge" aria-hidden="true">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
+          </svg>
+        </div>
+        <div class="discussion-guideline-content">
+          <h4>존중</h4>
+          <p>다른 참여자를 존중하고 건설적인 대화를 유지해 주세요</p>
+        </div>
+      </div>
+      <div class="discussion-guideline-item">
+        <div class="discussion-guideline-badge" aria-hidden="true">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+            <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+          </svg>
+        </div>
+        <div class="discussion-guideline-content">
+          <h4>명확성</h4>
+          <p>질문이나 의견을 명확하게 작성해 주세요</p>
+        </div>
+      </div>
+      <div class="discussion-guideline-item">
+        <div class="discussion-guideline-badge" aria-hidden="true">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="11" cy="11" r="8"/>
+            <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+          </svg>
+        </div>
+        <div class="discussion-guideline-content">
+          <h4>관련성</h4>
+          <p>보안, DevSecOps, 클라우드 관련 주제에 집중해 주세요</p>
+        </div>
+      </div>
+      <div class="discussion-guideline-item">
+        <div class="discussion-guideline-badge" aria-hidden="true">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"/>
+            <polyline points="16 6 12 2 8 6"/>
+            <line x1="12" y1="2" x2="12" y2="15"/>
+          </svg>
+        </div>
+        <div class="discussion-guideline-content">
+          <h4>공유</h4>
+          <p>유용한 정보와 경험을 자유롭게 공유해 주세요</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <div class="discussion-cta">
-    <a href="https://github.com/{{ site.giscus.repo }}/discussions" target="_blank" rel="noopener" class="btn btn-primary btn-large">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" class="btn-icon">
+  <!-- Community Stats -->
+  <section aria-labelledby="discussion-stats-heading">
+    <h2 id="discussion-stats-heading" class="discussion-section-title">Community</h2>
+    <div class="discussion-stats">
+      <div class="discussion-stat-card">
+        <svg class="discussion-stat-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+          <circle cx="9" cy="7" r="4"/>
+          <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+          <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+        </svg>
+        <div class="discussion-stat-number">50+</div>
+        <div class="discussion-stat-label">참여자</div>
+      </div>
+      <div class="discussion-stat-card">
+        <svg class="discussion-stat-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+        </svg>
+        <div class="discussion-stat-number">120+</div>
+        <div class="discussion-stat-label">토론</div>
+      </div>
+      <div class="discussion-stat-card">
+        <svg class="discussion-stat-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
+          <circle cx="12" cy="12" r="10"/>
+          <line x1="12" y1="17" x2="12.01" y2="17"/>
+        </svg>
+        <div class="discussion-stat-number">85+</div>
+        <div class="discussion-stat-label">답변 완료</div>
+      </div>
+      <div class="discussion-stat-card">
+        <svg class="discussion-stat-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/>
+        </svg>
+        <div class="discussion-stat-number">30+</div>
+        <div class="discussion-stat-label">프로젝트 공유</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <section class="discussion-cta" aria-labelledby="discussion-cta-heading">
+    <h2 id="discussion-cta-heading" class="discussion-cta-title">커뮤니티에 참여하세요</h2>
+    <p class="discussion-cta-desc">GitHub Discussions에서 다른 개발자들과 함께 지식을 나누고 성장하세요.</p>
+    <a href="https://github.com/{{ site.giscus.repo }}/discussions" target="_blank" rel="noopener noreferrer" class="btn-primary btn-large" aria-label="GitHub Discussions 페이지로 이동">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="btn-icon" aria-hidden="true">
         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
       </svg>
       Go to Discussions
     </a>
-  </div>
+  </section>
 </div>
