fix: CKA/CKAD 자격증 페이지에 정답률 표시 추가 (AWS SAA와 동일 구성)

--- a/certifications/ckad/index.html
+++ b/certifications/ckad/index.html
@@ -76,6 +76,10 @@ permalink: /certifications/ckad/
             <span class="stat-label">진행:</span>
             <span class="stat-value" id="progress-count">0</span>/<span id="total-questions">15</span>
           </span>
+          <span class="stat-item">
+            <span class="stat-label">정답률:</span>
+            <span class="stat-value" id="accuracy-rate">0%</span>
+          </span>
         </div>
         <button type="button" class="reset-button" id="reset-answers" aria-label="모든 답안 초기화">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
